--- a/eksitui/main.css
+++ b/eksitui/main.css
@@ -35,6 +35,7 @@
 }
 #loading-container {
   width: 1fr;
+  height: auto;
   align: center middle;
 }
 
@@ -49,7 +50,7 @@ TopicList {
   padding-left: 1;
 }
 #topic-container {
-  scrollbar-size: 10 1;
+  scrollbar-size-vertical: 1;
   padding-right: 2;
   overflow-y: scroll;
 }
@@ -104,6 +105,10 @@ Sidebar.-hidden {
   content-align: center middle;
 }
 
+#content-body {
+  scrollbar-color: rgb(111, 111, 77);
+  scrollbar-size-vertical: 2;
+}
 .entry-container {
   height: auto;
   padding: 0 3 0 1;
@@ -127,7 +132,7 @@ Sidebar.-hidden {
   text-style: bold;
 }
 .entry-pagination {
-  width: auto;
+  width: 1fr;
   height: auto;
   align: right top;
   padding-right: 2;
@@ -147,7 +152,7 @@ Sidebar.-hidden {
 .entry-pagination-next,
 .entry-pagination-previous {
   width: auto;
-  height: 1;
+  height: auto;
   border: none;
   margin: 0 1;
   background: $boost; /* $surface $panel $boost */
